--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css');
 
 body{
-    margin : 0;
+    /* margin : 0; */
+    font-family: 'noto sans', 'sans-serif' !important;
 
+}
+[lang="en"]{
+    background-color: aquamarine;
 }
